Bug 1991298 - Do not reassign default status of uninitialized accounts. r=mkmelin

Since Bug 1956258, `nsMsgAccountManager::GetDefaultAccount` always tries to
auto-set it if none could be found. When this function is first called during
startup, JsAccounts may not have been initialized yet, so the getter should
simply return `nullptr` in this case.

Differential Revision: https://phabricator.services.mozilla.com/D268462